# SIGTYP-2024-hierarchical-transformers

./: README.md  chinese_transliteration.py  lemmatization.py  models.py  morphological-analysis.py  pos-tagging.py  pretrain_deberta.py  pretrain_roberta.py  pyproject.toml  static_embeddings.py  train_tokenizer.py  utils.py
DeBERTa/configs/: ctw_base.json  ctw_small.json  ctw_tall.json  deberta_base.json  deberta_large.json  rtd_small.json
DeBERTa/huggingface/: __init__.py
DeBERTa/huggingface/ctw_deberta/: __init__.py  configuration_ctw_deberta.py  modeling_ctw_deberta.py
DeBERTa/huggingface/deberta_v2/: __init__.py  configuration_deberta_v2.py  modeling_deberta_v2.py
DeBERTa/train/: __init__.py
DeBERTa/train/apps/: run.py
DeBERTa/train/apps/models/: __init__.py  ctw_replaced_token_detection_model.py  replaced_token_detection_model.py
DeBERTa/train/apps/tasks/: mlm_task.py  rtd_task.py  task.py  task_registry.py
DeBERTa/train/data/: dataloader.py  dynamic_dataset.py  example.py
DeBERTa/train/deberta/: bert.py  nnmodule.py
DeBERTa/train/optims/: xadam.py
DeBERTa/train/training/: dist_launcher.py  trainer.py
DeBERTa/train/utils/: logger_util.py
embeddings/: load_embeddings.py
